更新UI界面 by 黄辰宇

--- a/src/main/java/com/example/VersionControlPlugin/ui/VersionControlUI.form
+++ b/src/main/java/com/example/VersionControlPlugin/ui/VersionControlUI.form
@@ -20,89 +20,69 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="8755b" binding="controlPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="8755b" binding="controlPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <splitpane position="left"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-13487566"/>
+              <enabled value="true"/>
+            </properties>
             <border type="none"/>
             <children>
-              <splitpane id="a9bc7" binding="controlSplitPane">
+              <component id="39ac9" class="javax.swing.JLabel" binding="controlLabel">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Versions"/>
+                </properties>
+              </component>
+              <splitpane id="7e95c" binding="controlSplitPane">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <continuousLayout value="true"/>
-                  <dividerLocation value="400"/>
+                  <dividerLocation value="250"/>
                   <dividerSize value="1"/>
                   <orientation value="0"/>
                 </properties>
                 <border type="none"/>
                 <children>
-                  <grid id="54d38" binding="versionPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                    <margin top="0" left="0" bottom="0" right="0"/>
-                    <constraints>
-                      <splitpane position="left"/>
-                    </constraints>
-                    <properties>
-                      <background color="-13487566"/>
-                      <enabled value="true"/>
-                    </properties>
-                    <border type="none"/>
-                    <children>
-                      <scrollpane id="a0477" binding="fileInfoScrollPane">
-                        <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties/>
-                        <border type="none"/>
-                        <children>
-                          <component id="4d609" class="javax.swing.JList" binding="fileInfoList">
-                            <constraints/>
-                            <properties>
-                              <background color="-13487566"/>
-                            </properties>
-                          </component>
-                        </children>
-                      </scrollpane>
-                      <component id="39ac9" class="javax.swing.JLabel" binding="fileInfoLabel">
-                        <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <text value="Modification"/>
-                        </properties>
-                      </component>
-                    </children>
-                  </grid>
-                  <grid id="2177" binding="gitPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                    <margin top="0" left="0" bottom="0" right="0"/>
+                  <scrollpane id="a0477" binding="fileInfoScrollPane">
                     <constraints>
                       <splitpane position="right"/>
                     </constraints>
-                    <properties>
-                      <background color="-13487566"/>
-                      <enabled value="true"/>
-                    </properties>
+                    <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="2539b" class="javax.swing.JLabel" binding="gitActionLabel">
-                        <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                        </constraints>
+                      <component id="4d609" class="javax.swing.JList" binding="fileInfoList">
+                        <constraints/>
                         <properties>
                           <background color="-13487566"/>
-                          <text value="Git Action"/>
+                          <enabled value="true"/>
                         </properties>
                       </component>
-                      <vspacer id="74249">
-                        <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                      </vspacer>
                     </children>
-                  </grid>
+                  </scrollpane>
+                  <scrollpane id="7fe0b" binding="versionScrollPane">
+                    <constraints>
+                      <splitpane position="left"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="cebec" class="javax.swing.JList" binding="versionList">
+                        <constraints/>
+                        <properties>
+                          <background color="-13487566"/>
+                          <enabled value="true"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
                 </children>
               </splitpane>
             </children>
