--- a/src/main/java/com/example/VersionControlPlugin/ui/VersionControlUI.form
+++ b/src/main/java/com/example/VersionControlPlugin/ui/VersionControlUI.form
@@ -58,7 +58,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="4d609" class="javax.swing.JList" binding="fileNodeList">
+                      <component id="4d609" class="javax.swing.JList" binding="fileInfoList">
                         <constraints/>
                         <properties>
                           <background color="-13487566"/>
